IndexedDB add should fail adding an inline and passed key simultaneously https://bugs.webkit.org/show_bug.cgi?id=58598

Patch by Joshua Bell <jsbell@chromium.org> on 2011-10-24
Reviewed by Tony Chang.

Source/WebCore:

Test: storage/indexeddb/mozilla/key-requirements-inline-and-passed.html

Implement the spec clause: passing a key into add() or put() when
the object store has a key path ("inline key") is an error.

* storage/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::put):

LayoutTests:

* storage/indexeddb/mozilla/key-requirements-inline-and-passed.html: Added.
* storage/indexeddb/mozilla/key-requirements-inline-and-passed-expected.txt: Added.

Canonical link: https://commits.webkit.org/86927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@98258 268f45cc-cd09-0410-ab3c-d52691b4dbfc